--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
     justify-content: center;
 }
@@ -13,4 +12,18 @@ body {
 .blurb {
     width: 50vw;
     margin: 5em;
+}
+
+.video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.video iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
