--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,17 @@ body {
 }
 
 .logo {
-    margin: 2em;
+    position: relative;
+    padding-bottom: 40%;
+    height: 0;
+}
+.logo img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    padding: 2.5em;
 }
 
 .blurb {
@@ -30,4 +40,5 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
+    padding: 0.5em;
 }
