--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,16 @@ body {
     justify-content: center;
 }
 
+.logo-container {
+    display: flex;
+    justify-content: center;
+}
+
 .logo {
     position: relative;
-    padding-bottom: 40%;
+    padding-bottom: 25%;
     height: 0;
+    width: 60%
 }
 .logo img {
     position: absolute;
@@ -41,4 +47,9 @@ p {
     width: 100%;
     height: 100%;
     padding: 0.5em;
+}
+
+.container {
+    flex-direction: column;
+    align-items: center;
 }
